<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_tutorial.SecondTutorialActivity">

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="250sp"
        android:text="0"
        android:gravity="center"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ctrColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ctrCounter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/btnBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_black"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="5sp"
            android:onClick="changeBackground"
            android:backgroundTint="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnRed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btnRed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_red"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:backgroundTint="@color/red"
            android:onClick="changeBackground"
            app:layout_constraintLeft_toRightOf="@id/btnBlack"
            app:layout_constraintRight_toLeftOf="@id/btnBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_blue"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:backgroundTint="@color/blue"
            android:onClick="changeBackground"
            app:layout_constraintLeft_toRightOf="@id/btnRed"
            app:layout_constraintRight_toLeftOf="@id/btnGreen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_green"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/green"
            android:onClick="changeBackground"
            app:layout_constraintLeft_toRightOf="@id/btnBlue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_addition"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="5sp"
            android:onClick="addCounter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnSubtraction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_reset"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="10sp"
            android:onClick="resetCounter"
            app:layout_constraintLeft_toRightOf="@+id/btnAddition"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>